I remove all links from the pages that lead outside the project. I add the folder pages and I put inside the index2 and index3 that now are called letter.html and contact.html respectively. I add comments in all the html to improve the readability of the code. I remove the container-fluid that contained the navbar (I think this is the reason why the dropdown does not open above the content and scrolls vertically). I fix the row element that was loose and remove all the br's from the code (except for the README). I also modify the README with the changes made. // Elimino todos los links de las paginas que conducen fuera del proyecto. Añado la carpeta pages y meto dentro los index2 y index3 que ahora se llaman carta.html y contacto.html respectivamente. Añado comentarios en todos los html para mejorar la legivilidad del codigo. Quito el container-fluid que contenia la navbar(creo que este es el motivo por el que el desplegable no se abre por encima del contenido y hace scroll vertical). Arrelgo el elemento row que habia suelto y elimino todos los br del codigo (a excepcion de los del README). Tambien modifico el README con los cambios realizados.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@
 #menuhamburguesa {
     background-color: #171847;
     font-weight: bold;
-    z-index: 5;
 }
 .barranavegacion {
     background-color: #171847;
